[project]
name = "selfhealingrag"
version = "0.1.0"
description = "RAG that can auto-evaluate and correct strategy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.4",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
]
